--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -335,8 +335,8 @@
       </form>
     </div>
   </section>
-  <section class="dialog-bakdrop" x-show="deleteDialog">
-    <dialog class="dialog">
+  <section class="dialog-backdrop" x-show="deleteDialog">
+    <div class="dialog">
       <form
         action="{% url 'delete_course' %}"
         method="post"
@@ -363,26 +363,18 @@
         </p>
         <input type="hidden" name="pk" x-model="pk" />
         <div class="flex gap-3">
-          <button
-            @click.prevent="deleteDialog = false"
-            class="rounded-lg border border-slate-500 p-3"
-          >
+          <button @click.prevent="deleteDialog = false" class="alt">
             Voltar
           </button>
-          <button
-            type="submit"
-            class="rounded-lg border-0 bg-red-500 p-3 text-white"
-          >
-            Confirmar
-          </button>
+          <button type="submit">Confirmar</button>
         </div>
       </form>
-    </dialog>
+    </div>
   </section>
 
   <section class="flex flex-col gap-6">
     <header class="flex justify-between text-color-primary">
-      <h1 class="mb-4 text-4xl font-semibold">Cursos</h1>
+      <h1 class="mb-4 text-4xl font-semibold text-color-primary">Cursos</h1>
       <div class="flex gap-2">
         {% if user|can:'create_course' %}
         <button @click="clear()">
@@ -427,8 +419,15 @@
     >
       <header class="flex justify-between px-6 py-4">
         <div>
-          <h2>{{ course.name }} - {{ course.slug }}</h2>
-          <span>Turno: {{ course.get_time_display }}</span>
+          <h2 class="text-color-primary font-semibold">
+            {{ course.name }} - {{ course.slug }}
+          </h2>
+          <div>
+            <span class="text-color-primary">Turno:</span>
+            <span class="text-color-secondary">
+              {{ course.get_time_display }}
+            </span>
+          </div>
         </div>
         <div class="relative">
           <button @click="details = !details">
