Finalizing dashboard part3

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -213,7 +213,7 @@
 </main>
 {% endif %}
 {% if not user.is_staff %}
-<main class="framed m-8 mb-10 px-5">
+<main class=" m-8 mb-10 px-5">
   <div class="mt-10 flex justify-center md:mt-16">
     <div
       class="flex h-[300px] w-[360px] items-center justify-center lg:h-[380px] lg:w-[460px]"
@@ -375,7 +375,7 @@
   </h1>
 
   <div class="mb-6 mt-6 flex justify-center md:mt-8">
-    <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-10">
+    <div class="grid grid-cols-1 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 2xl:grid-cols-5 gap-10">
       <!-- Card 1 -->
       <div class="flex justify-center ">
         <div class="flex h-[150px] w-[270px] flex-col items-center justify-center rounded-2xl bg-white px-4 py-8 xl:px-2">
