added validation to enroll forms

--- a/core/templates/core/secret.html
+++ b/core/templates/core/secret.html
@@ -107,6 +107,7 @@
               maxlength="150"
               minlength="5"
               class="w-full"
+              x-model="name"
               @keydown="validateName"
               required
             />
