--- a/core/templates/core/enroll.html
+++ b/core/templates/core/enroll.html
@@ -18,8 +18,6 @@
         <select name="role" id="sl-role" x-model="role">
           <option selected value="student">Estudante</option>
           <option value="teacher">Professor</option>
-          <option value="staff">Funcionário</option>
-          <option value="secretary">Secretário</option>
           <option value="coordinator">Coordenador</option>
         </select>
       </div>
@@ -119,6 +117,7 @@
               maxlength="150"
               minlength="5"
               class="w-full"
+              x-model="name"
               @keydown="validateName"
               required
             />
