Fixed events placement

--- a/core/templates/core/navbar.html
+++ b/core/templates/core/navbar.html
@@ -190,7 +190,7 @@
             </a>
           </li>
           <li>
-            <a href="">
+            <a href="{% url 'eventos' %}">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 fill="none"
