--- a/communication/templates/communication/events.html
+++ b/communication/templates/communication/events.html
@@ -1,177 +1,194 @@
-{% extends 'core/base.html' %} {% load static %} {% load permission_tags %} {% block head %}
-
-
+{% extends 'core/base.html' %} {% load permission_tags %} {% block head %}
+<title>Eventos</title>
 {% endblock %} {% block content %}
-
-<div class="flex justify-center min-h-full pt-24">
-  <div class="text-[30px] text-color-primary font-semibold w-[50%]">Eventos</div>
-  <div class="rounded-2xl border border-color-secondary p-1.5">
-    <img
-    src="{% static '/core/images/filter.png' %}"
-    alt="Reunião"
-    width="100"
-    class="h-6 w-6 text-color-secondary"
-    >
-    <path
-      class="color-secondary"
-      stroke-linecap="round"
-      stroke-linejoin="round"
-      d="M14.857 17.082a23.848 23.848 0 005.454-1.31A8.967 8.967 0 0118 9.75v-.7V9A6 6 0 006 9v.75a8.967 8.967 0 01-2.312 6.022c1.733.64 3.56 1.085 5.455 1.31m5.714 0a24.255 24.255 0 01-5.714 0m5.714 0a3 3 0 11-5.714 0M3.124 7.5A8.969 8.969 0 015.292 3m13.416 0a8.969 8.969 0 012.168 4.5"
-    />
-  </img>
-  </div>
-</div>
-
-<div class>
-  <div class="mr-8">
-    <br><br>
-<div class="bg-white max-w-xl mx-auto border border-black-200" x-data="{selected:0}">
-		<ul class="shadow-box">
-						
-		<li class="relative border-b border-black-200">
-
-			<button type="button" class="w-full px-8 py-6 text-left" @click="selected !== 1 ? selected = 1 : selected = null">
-				<div class="flex items-center justify-between, text-[20px] text-color-primary font-semibold w-[70%]">
-          <img
-            src="{% static '/core/images/reuniao.jpg' %}"
-            alt="Reunião"
-            width="100"
+<main
+  class="m-20 min-h-full md2:justify-normal md2:pl-5 md2:pt-16"
+  x-data="{ createDialog: false, filterDialog: false }"
+>
+  <header class="flex w-full justify-between text-color-primary">
+    <h1 class="text-4xl font-semibold">Eventos</h1>
+    {% if user|has_role:'admin' %}
+    <div>
+      <button @click="createDialog = true" class="text-base">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="h-8 w-8"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M12 9v6m3-3H9m12 0a9 9 0 11-18 0 9 9 0 0118 0z"
           />
-          <div>
-					<b style="padding-left: 30px;"> Reunião de Pais e Responsáveis</b>
-          
-				<p class="text-color-secondary" style="padding-left: 30px;">25/11/2005 </p>
-        
-        </div>
-      </div>
-			</button>
+        </svg>
+      </button>
+      {% endif %}
+      <button @click="filterDialog = true">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="h-8 w-8"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M10.5 6h9.75M10.5 6a1.5 1.5 0 11-3 0m3 0a1.5 1.5 0 10-3 0M3.75 6H7.5m3 12h9.75m-9.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-3.75 0H7.5m9-6h3.75m-3.75 0a1.5 1.5 0 01-3 0m3 0a1.5 1.5 0 00-3 0m-9.75 0h9.75"
+          />
+        </svg>
+      </button>
+    </div>
+  </header>
 
-			<div class="relative overflow-hidden transition-all max-h-0 duration-500" x-ref="container1" x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''">
-				<div class="p-6">
-          <table>
-            <tr>
-              <td class="text-color-secondary">
-                <table style="width: 5px; padding:none;">
+  <div class>
+    <div class="mr-8">
+      <br /><br />
+      <div
+        class="border-black-200 mx-auto max-w-xl border bg-white"
+        x-data="{selected:0}"
+      >
+        <ul class="shadow-box">
+          <li class="border-black-200 relative border-b">
+            <button
+              type="button"
+              class="w-full px-8 py-6 text-left"
+              @click="selected !== 1 ? selected = 1 : selected = null"
+            >
+              <div
+                class="justify-between, flex w-[70%] items-center text-[20px] font-semibold text-color-primary"
+              >
+                <img
+                  src="https://images.unsplash.com/photo-1552581234-26160f608093?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                  alt="Reunião"
+                  width="100"
+                />
+                <div>
+                  <b style="padding-left: 30px">
+                    Reunião de Pais e Responsáveis</b
+                  >
+
+                  <p class="text-color-secondary" style="padding-left: 30px">
+                    25/11/2005
+                  </p>
+                </div>
+              </div>
+            </button>
+
+            <div
+              class="relative max-h-0 overflow-hidden transition-all duration-500"
+              x-ref="container1"
+              x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
+            >
+              <div class="p-6">
+                <table>
                   <tr>
-                    <td style="color:rgb(230 168 46)">Categoria:</td>
-                    <td style="color:rgb(230 168 46)">Reunião</td>
-                  </tr>
-                  <tr>
-                    <td style="color:rgb(230 168 46)">Local:</td>
-                    <td style="color:rgb(230 168 46)">Auditório</td>
-                  </tr>
-                  <tr>
-                    <td style="color:rgb(230 168 46)">Horário</td>
-                    <td style="color:rgb(230 168 46)">18h00</td>
+                    <td class="text-color-secondary">
+                      <table style="width: 5px; padding: none">
+                        <tr>
+                          <td style="color: rgb(230 168 46)">Categoria:</td>
+                          <td style="color: rgb(230 168 46)">Reunião</td>
+                        </tr>
+                        <tr>
+                          <td style="color: rgb(230 168 46)">Local:</td>
+                          <td style="color: rgb(230 168 46)">Auditório</td>
+                        </tr>
+                        <tr>
+                          <td style="color: rgb(230 168 46)">Horário</td>
+                          <td style="color: rgb(230 168 46)">18h00</td>
+                        </tr>
+                      </table>
+                    </td>
+
+                    <td>
+                      Trazer sei lá o que, sei lá o que mais só para adicionar e
+                      ter mais cosia aqui, beijos flw
+                    </td>
                   </tr>
                 </table>
-              <td>Trazer sei lá o que, sei lá o que mais só para adicionar e ter mais cosia aqui, beijos flw</td>
-            </tr>
-          </table>
-				</div>
-			</div>
-
-		</li>
-    </ul>
-    </div>
-    </div>
-</div>
-
-<div class>
-      <div class="mr-8">
-        <br><br>
-    <div class="bg-white max-w-xl mx-auto border border-black-200" x-data="{selected:0}">
-        <ul class="shadow-box">
-                
-        <li class="relative border-b border-black-200">
-    
-          <button type="button" class="w-full px-8 py-6 text-left" @click="selected !== 1 ? selected = 1 : selected = null">
-            <div class="flex items-center justify-between, text-[20px] text-color-primary font-semibold w-[70%]">
-              <img
-                src="{% static '/core/images/reuniao.jpg' %}"
-                alt="Reunião"
-                width="100"
-              />
-              <div>
-              <b style="padding-left: 30px;"> Reunião de Pais e Responsáveis</b>
-              
-            <p class="text-color-secondary" style="padding-left: 30px;">25/11/2005 </p>
-            
+              </div>
             </div>
-          </div>
-          </button>
-    
-          <div class="relative overflow-hidden transition-all max-h-0 duration-500" x-ref="container1" x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''">
-            <div class="p-6">
-              <table>
-                <tr>
-                  <td class="text-color-secondary">
-                    <table style="width: 5px; padding:none;">
-                      <tr>
-                        <td style="color:rgb(230 168 46)">Categoria:</td>
-                        <td style="color:rgb(230 168 46)">Reunião</td>
-                      </tr>
-                      <tr>
-                        <td style="color:rgb(230 168 46)">Local:</td>
-                        <td style="color:rgb(230 168 46)">Auditório</td>
-                      </tr>
-                      <tr>
-                        <td style="color:rgb(230 168 46)">Horário</td>
-                        <td style="color:rgb(230 168 46)">18h00</td>
-                      </tr>
-                    </table>
-                  <td>Trazer sei lá o que, sei lá o que mais só para adicionar e ter mais cosia aqui, beijos flw</td>
-                </tr>
-              </table>
-            </div>
-          </div>
-    
-        </li>
+          </li>
         </ul>
-        </div>
-        </div>
-</div>
+      </div>
+    </div>
+  </div>
 
-<style>
-    .max-h-0 {
-    max-height: 0;
-    }
-    .max-w-xl {
-    max-width: 60rem/* 576px */;
-    }
-    table, td{
-      border: none;
-      color: rgb(5 68 153);
-      padding-left: 50px;
-      text-align: left;
-      vertical-align: top;
-    }
-    td{
-      font-size: 19px;
-      width: 550px;
-    }
-    .border {
-    border-width: 1px;
-    border-radius: 50px;
-    }
-	  .p-8{
-		color: orange;
-	  }
-    .p-7{
-		color: rgb(230 168 46);
-	  }
-    img{
-      border-radius: 200px;
-      height: 90px;
-    }
-    .rounded-2xl {
-    border-radius: 50px/* 16px */;
-    }
-    .p-1\.5 {
-    padding: 10px/* 6px */;
-    }
-</style>
-    
+  <div class>
+    <div class="mr-8">
+      <br /><br />
+      <div
+        class="border-black-200 mx-auto max-w-xl border bg-white"
+        x-data="{selected:0}"
+      >
+        <ul class="shadow-box">
+          <li class="border-black-200 relative border-b">
+            <button
+              type="button"
+              class="w-full px-8 py-6 text-left"
+              @click="selected !== 1 ? selected = 1 : selected = null"
+            >
+              <div
+                class="justify-between, flex w-[70%] items-center text-[20px] font-semibold text-color-primary"
+              >
+                <img
+                  src="https://images.unsplash.com/photo-1552581234-26160f608093?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
+                  alt="Reunião"
+                  width="100"
+                />
+                <div>
+                  <b style="padding-left: 30px">
+                    Reunião de Pais e Responsáveis</b
+                  >
+
+                  <p class="text-color-secondary" style="padding-left: 30px">
+                    25/11/2005
+                  </p>
+                </div>
+              </div>
+            </button>
+
+            <div
+              class="relative max-h-0 overflow-hidden transition-all duration-500"
+              x-ref="container1"
+              x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
+            >
+              <div class="p-6">
+                <table>
+                  <tr>
+                    <td class="text-color-secondary">
+                      <table style="width: 5px; padding: none">
+                        <tr>
+                          <td style="color: rgb(230 168 46)">Categoria:</td>
+                          <td style="color: rgb(230 168 46)">Reunião</td>
+                        </tr>
+                        <tr>
+                          <td style="color: rgb(230 168 46)">Local:</td>
+                          <td style="color: rgb(230 168 46)">Auditório</td>
+                        </tr>
+                        <tr>
+                          <td style="color: rgb(230 168 46)">Horário</td>
+                          <td style="color: rgb(230 168 46)">18h00</td>
+                        </tr>
+                      </table>
+                    </td>
+
+                    <td>
+                      Trazer sei lá o que, sei lá o que mais só para adicionar e
+                      ter mais cosia aqui, beijos flw
+                    </td>
+                  </tr>
+                </table>
+              </div>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+</main>
 {% endblock %}
-
-
