--- a/communication/templates/communication/events.html
+++ b/communication/templates/communication/events.html
@@ -1,8 +1,27 @@
 {% extends 'core/base.html' %} {% load permission_tags %} {% block head %}
 <title>Eventos</title>
+<script defer>
+  document.addEventListener("alpine:init", () => {
+    Alpine.data("post", () => ({
+      seeDialog: false,
+      imgUrl: "",
+      title: "",
+      info: "",
+      date: "",
+
+      fill(el) {
+        this.seeDialog = true;
+        this.imgUrl = el.querySelector("img").src;
+        this.title = el.querySelector("#title").textContent.trim();
+        this.info = el.querySelector("#info").textContent.trim();
+        this.date = el.querySelector("#date").textContent.trim();
+      },
+    }));
+  });
+</script>
 {% endblock %} {% block content %}
 <main
-  class="m-20 min-h-full md2:justify-normal md2:pl-5 md2:pt-16"
+  class="mx-20 my-10 min-h-full md2:justify-normal md2:pl-5 md2:pt-16"
   x-data="{ createDialog: false, filterDialog: false }"
 >
   <header class="flex w-full justify-between text-color-primary">
@@ -45,6 +64,9 @@
     </div>
   </header>
 
+  <article>
+    
+  </article>
   <div class>
     <div class="mr-8">
       <br /><br />
@@ -190,5 +212,190 @@
       </div>
     </div>
   </div>
+  <form
+    method="post"
+    action="{% url 'comunicados' %}"
+    enctype="multipart/form-data"
+  >
+    {% csrf_token %}
+    <!-- FORM FOR CREATE COMUNICATE-->
+    <section x-show="createDialog" class="dialog-backdrop">
+      <div class="dialog no_scroll">
+        <header class="px-5 pt-4">
+          <h2>Criar Evento</h2>
+          <div>
+            <button
+              @click.prevent="createDialog = false"
+              class="text-3xl font-bold text-color-primary"
+            >
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="h-6 w-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M6 18L18 6M6 6l12 12"
+                />
+              </svg>
+            </button>
+          </div>
+        </header>
+        <section class="flex flex-col gap-3 px-5">
+          <div class="flex flex-col text-lg font-normal">
+            <label>Titulo:</label>
+            <input type="text" class="h-10" name="title" required />
+          </div>
+          <div class="flex flex-col text-lg font-normal">
+            <label>Local:</label>
+            <input type="text" class="h-10" name="place" required />
+          </div>
+          <div
+            class="flex items-center gap-1 text-lg font-normal"
+            x-data="{ imageName: 'Foto' }"
+          >
+            <label>Data de Lançamento:</label>
+            <input
+              type="date"
+              :min="new Date().toISOString().split('T')[0]"
+              :value="new Date().toISOString().split('T')[0]"
+              name="date"
+            />
+            <label
+              for="file-picture"
+              class="btn ml-3 flex w-max cursor-pointer items-center gap-1"
+            >
+              <span
+                class="truncate max-w-[4rem]"
+                x-text="imageName ?? 'Foto de perfil'"
+              ></span>
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="2.2"
+                stroke="currentColor"
+                class="h-5 w-5"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M9 8.25H7.5a2.25 2.25 0 00-2.25 2.25v9a2.25 2.25 0 002.25 2.25h9a2.25 2.25 0 002.25-2.25v-9a2.25 2.25 0 00-2.25-2.25H15m0-3l-3-3m0 0l-3 3m3-3V15"
+                />
+              </svg>
+            </label>
+            <input
+              type="file"
+              name="image"
+              id="file-picture"
+              accept="image/*"
+              required
+              hidden
+              @input="imageName = $el.files[0].name"
+            />
+          </div>
+          <div class="flex h-full flex-col text-lg font-normal">
+            <label class="pb-2">Conteúdo:</label>
+            <textarea
+              class="h-[180px] w-full resize-none"
+              placeholder="Digite o Comunicado aqui"
+              name="info"
+              required
+            ></textarea>
+          </div>
+          <div class="flex items-center gap-1 text-lg font-normal">
+            <label>Categoria:</label>
+            <select name="category" id="sl-category">
+              <option value="r">Reunião</option>
+              <option value="p">Palestra</option>
+              <option value="rp">Reposição</option>
+              <option value="*">Outros</option>
+            </select>
+          </div>
+          <div class="flex items-center gap-1 text-lg font-normal">
+            <label>Apenas para professores:</label>
+            <input type="checkbox" name="staff_only" />
+          </div>
+          <div class="flex flex-col text-lg font-normal">
+            <label>Para o curso:</label>
+            <input
+              type="text"
+              class="h-10"
+              name="course"
+              placeholder="Deixe em branco para um comunicado geral"
+            />
+          </div>
+          <div class="flex flex-col text-lg font-normal">
+            <label>Para a turma:</label>
+            <input
+              type="text"
+              class="h-10"
+              name="course"
+              placeholder="Deixe em branco para um comunicado geral"
+            />
+          </div>
+          <div class="flex justify-center pt-6">
+            <button type="submit">Aplicar</button>
+          </div>
+        </section>
+      </div>
+    </section>
+  </form>
+
+  <form method="get" action="{% url 'comunicados' %}">
+    <div x-show="filterDialog" class="dialog-backdrop">
+      <div class="dialog">
+        <header
+          class="mt-4 px-5 flex flex-row justify-between text-3xl font-bold"
+        >
+          <h2>Filtrar Eventos</h2>
+          <button
+            @click.prevent="filterDialog = false"
+            class="text-3xl font-bold text-color-primary"
+          >
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke-width="1.5"
+              stroke="currentColor"
+              class="h-6 w-6"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                d="M6 18L18 6M6 6l12 12"
+              />
+            </svg>
+          </button>
+        </header>
+        <section class="flex flex-col gap-4 p-5">
+          <input
+            type="search"
+            name="title"
+            class="mx-auto w-full rounded-lg border border-color-primary bg-gray-50 text-sm text-gray-900"
+          />
+          <div class="flex flex-row justify-between gap-2 text-lg font-normal">
+            <label>
+              De:
+              <input type="date" name="start-date" class="rounded-3xl border-color-primary"
+            /></label>
+            <label>
+              Até:
+              <input type="date" name="end-date" class="rounded-3xl border-color-primary"
+            /></label>
+          </div>
+          <div class="flex flex-row justify-center space-x-5 pt-4 text-lg">
+            <button type="reset" class="alt">Limpar</button>
+            <button type="submit">Aplicar</button>
+          </div>
+        </section>
+      </div>
+    </div>
+  </form>
 </main>
 {% endblock %}
