--- a/communication/templates/communication/events.html
+++ b/communication/templates/communication/events.html
@@ -64,154 +64,72 @@
     </div>
   </header>
 
-  <article>
+  <article class="mt-10">
+    {% for event in events %}
+    <div
+      class="mx-auto max-w-xl rounded-3xl bg-color-bg-lighter"
+      x-data="{ selected: false }"
+    >
+      <ul class="shadow-box">
+        <li class="border-black-200 relative border-b">
+          <button
+            type="button"
+            class="w-full px-8 py-6 text-left"
+            @click="selected = !selected"
+          >
+            <div
+              class="justify-between, flex w-[70%] items-center text-[20px] font-semibold text-color-primary"
+            >
+              <img
+                src="{% url 'img' 'events' event.pk %}"
+                alt="Reunião"
+                class="w-28 rounded-full"
+              />
+              <div>
+                <h3 class="pl-10 font-bold">{{ event.title }}</h3>
+                <p class="pl-10 text-color-secondary">
+                  {{ event.date|date:'d/m/Y' }}
+                </p>
+              </div>
+            </div>
+          </button>
 
+          <div
+            class="relative max-h-0 overflow-hidden transition-all duration-500"
+            x-ref="container1"
+            x-bind:style="selected ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
+          >
+            <div class="p-6">
+              <table>
+                <tr>
+                  <td class="text-color-secondary">
+                    <table style="width: 5px; padding: none">
+                      <tr>
+                        <td style="color: rgb(230 168 46)">Categoria:</td>
+                        <td style="color: rgb(230 168 46)">Reunião</td>
+                      </tr>
+                      <tr>
+                        <td style="color: rgb(230 168 46)">Local:</td>
+                        <td style="color: rgb(230 168 46)">Auditório</td>
+                      </tr>
+                      <tr>
+                        <td style="color: rgb(230 168 46)">Horário</td>
+                        <td style="color: rgb(230 168 46)">18h00</td>
+                      </tr>
+                    </table>
+                  </td>
+
+                  <td>{{ event.info }}</td>
+                </tr>
+              </table>
+            </div>
+          </div>
+        </li>
+      </ul>
+    </div>
+    {% endfor %}
   </article>
-  <div class>
-    <div class="mr-8">
-      <br /><br />
-      <div
-        class="border-black-200 mx-auto max-w-xl border bg-white"
-        x-data="{selected:0}"
-      >
-        <ul class="shadow-box">
-          <li class="border-black-200 relative border-b">
-            <button
-              type="button"
-              class="w-full px-8 py-6 text-left"
-              @click="selected !== 1 ? selected = 1 : selected = null"
-            >
-              <div
-                class="justify-between, flex w-[70%] items-center text-[20px] font-semibold text-color-primary"
-              >
-                <img
-                  src="https://images.unsplash.com/photo-1552581234-26160f608093?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                  alt="Reunião"
-                  width="100"
-                />
-                <div>
-                  <b style="padding-left: 30px">
-                    Reunião de Pais e Responsáveis</b
-                  >
 
-                  <p class="text-color-secondary" style="padding-left: 30px">
-                    25/11/2005
-                  </p>
-                </div>
-              </div>
-            </button>
-
-            <div
-              class="relative max-h-0 overflow-hidden transition-all duration-500"
-              x-ref="container1"
-              x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
-            >
-              <div class="p-6">
-                <table>
-                  <tr>
-                    <td class="text-color-secondary">
-                      <table style="width: 5px; padding: none">
-                        <tr>
-                          <td style="color: rgb(230 168 46)">Categoria:</td>
-                          <td style="color: rgb(230 168 46)">Reunião</td>
-                        </tr>
-                        <tr>
-                          <td style="color: rgb(230 168 46)">Local:</td>
-                          <td style="color: rgb(230 168 46)">Auditório</td>
-                        </tr>
-                        <tr>
-                          <td style="color: rgb(230 168 46)">Horário</td>
-                          <td style="color: rgb(230 168 46)">18h00</td>
-                        </tr>
-                      </table>
-                    </td>
-
-                    <td>
-                      Trazer sei lá o que, sei lá o que mais só para adicionar e
-                      ter mais cosia aqui, beijos flw
-                    </td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
-
-  <div class>
-    <div class="mr-8">
-      <br /><br />
-      <div
-        class="border-black-200 mx-auto max-w-xl border bg-white"
-        x-data="{selected:0}"
-      >
-        <ul class="shadow-box">
-          <li class="border-black-200 relative border-b">
-            <button
-              type="button"
-              class="w-full px-8 py-6 text-left"
-              @click="selected !== 1 ? selected = 1 : selected = null"
-            >
-              <div
-                class="justify-between, flex w-[70%] items-center text-[20px] font-semibold text-color-primary"
-              >
-                <img
-                  src="https://images.unsplash.com/photo-1552581234-26160f608093?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=2070&q=80"
-                  alt="Reunião"
-                  width="100"
-                />
-                <div>
-                  <b style="padding-left: 30px">
-                    Reunião de Pais e Responsáveis</b
-                  >
-
-                  <p class="text-color-secondary" style="padding-left: 30px">
-                    25/11/2005
-                  </p>
-                </div>
-              </div>
-            </button>
-
-            <div
-              class="relative max-h-0 overflow-hidden transition-all duration-500"
-              x-ref="container1"
-              x-bind:style="selected == 1 ? 'max-height: ' + $refs.container1.scrollHeight + 'px' : ''"
-            >
-              <div class="p-6">
-                <table>
-                  <tr>
-                    <td class="text-color-secondary">
-                      <table style="width: 5px; padding: none">
-                        <tr>
-                          <td style="color: rgb(230 168 46)">Categoria:</td>
-                          <td style="color: rgb(230 168 46)">Reunião</td>
-                        </tr>
-                        <tr>
-                          <td style="color: rgb(230 168 46)">Local:</td>
-                          <td style="color: rgb(230 168 46)">Auditório</td>
-                        </tr>
-                        <tr>
-                          <td style="color: rgb(230 168 46)">Horário</td>
-                          <td style="color: rgb(230 168 46)">18h00</td>
-                        </tr>
-                      </table>
-                    </td>
-
-                    <td>
-                      Trazer sei lá o que, sei lá o que mais só para adicionar e
-                      ter mais cosia aqui, beijos flw
-                    </td>
-                  </tr>
-                </table>
-              </div>
-            </div>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </div>
   <form
     method="post"
     action="{% url 'eventos' %}"
@@ -270,7 +188,7 @@
               class="btn ml-3 flex w-max cursor-pointer items-center gap-1"
             >
               <span
-                class="truncate max-w-[4rem]"
+                class="max-w-[4rem] truncate"
                 x-text="imageName ?? 'Foto de perfil'"
               ></span>
               <svg
@@ -308,15 +226,6 @@
             ></textarea>
           </div>
           <div class="flex items-center gap-1 text-lg font-normal">
-            <label>Categoria:</label>
-            <select name="category" id="sl-category">
-              <option value="r">Reunião</option>
-              <option value="p">Palestra</option>
-              <option value="rp">Reposição</option>
-              <option value="*">Outros</option>
-            </select>
-          </div>
-          <div class="flex items-center gap-1 text-lg font-normal">
             <label>Apenas para professores:</label>
             <input type="checkbox" name="staff_only" />
           </div>
@@ -350,7 +259,7 @@
     <div x-show="filterDialog" class="dialog-backdrop">
       <div class="dialog">
         <header
-          class="mt-4 px-5 flex flex-row justify-between text-3xl font-bold"
+          class="mt-4 flex flex-row justify-between px-5 text-3xl font-bold"
         >
           <h2>Filtrar Eventos</h2>
           <button
@@ -382,11 +291,17 @@
           <div class="flex flex-row justify-between gap-2 text-lg font-normal">
             <label>
               De:
-              <input type="date" name="start-date" class="rounded-3xl border-color-primary"
+              <input
+                type="date"
+                name="start-date"
+                class="rounded-3xl border-color-primary"
             /></label>
             <label>
               Até:
-              <input type="date" name="end-date" class="rounded-3xl border-color-primary"
+              <input
+                type="date"
+                name="end-date"
+                class="rounded-3xl border-color-primary"
             /></label>
           </div>
           <div class="flex flex-row justify-center space-x-5 pt-4 text-lg">
