pré-banca dashboard fixed

--- a/core/templates/core/dashboard.html
+++ b/core/templates/core/dashboard.html
@@ -118,7 +118,7 @@
   <form>
     <div
       :class="filterDialog ? 'flex' : 'hidden'"
-      class="hidden fixed inset-0 items-center justify-center bg-black bg-opacity-25"
+      class="fixed inset-0 items-center justify-center bg-black bg-opacity-25 z-30"
     >
       <div class="h-4/5 w-2/5 rounded-3xl bg-color-grey">
         <header
