--- a/core/templates/core/boletim.html
+++ b/core/templates/core/boletim.html
@@ -19,8 +19,8 @@
       <option>3º Ano</option>
     </select>
   </label>
-  <section class="box lg:w-max overflow-x-scroll">
-    <table class="main-table border-separate border-spacing-3 px-2">
+  <section class="box flex justify-left md:justify-center w-full overflow-x-scroll md:overflow-x-hidden">
+    <table class="main-table border-separate border-spacing-3 px-10">
       <thead>
         <tr>
           <th><!-- empty --></th>
@@ -56,14 +56,14 @@
         </tr>
         <tr>
           <td data-tippy-content="Inglês">ING</td>
-          <td>asdas</td>
-          <td>asdas</td>
-          <td>asd</td>
-          <td>asd</td>
-          <td>asd</td>
-          <td>asd</td>
-          <td>asd</td>
-          <td>asd</td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
+          <td></td>
           <td><!-- empty --></td>
           <td></td>
           <td></td>
@@ -175,174 +175,53 @@
   <h2 class="truncate text-3xl font-semibold text-color-primary">
     Ficha de Desempenho - Sala de Aula
   </h2>
-  <section class="box p-4">
-    <table>
-      <thead>
-        <tr>
-          <th class="info bg-color-primary-dimm">Instrumento</th>
-          <th class="info bg-color-primary-dimm">Data</th>
-          <th class="info bg-color-primary-dimm">Menção</th>
-          <th class="info bg-color-primary-dimm">Observação</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr>
-          <td class="info bg-color-grey">oii</td>
-          <td class="info bg-color-grey">asdasd</td>
-          <td class="info bg-color-grey">asdasd</td>
-          <td>
-            <form method="POST">
-              {% if request.user.is_superuser %} {% csrf_token %}
-              <input
-                type="text"
-                name="obs"
-                class="info bg-color-grey"
-                maxlength="200"
-                placeholder="Escreva Aqui!"
-              />
-              <button type="submit" class="btn rounded-lg bg-color-secondary">
-                Enviar
-              </button>
-              {% else %}
-              <div class="cursor-not-allowed rounded-full bg-color-grey">
-                <p
-                  name="obs_student"
-                  value="{{ request.POST.obs }}"
-                  readonly
-                ></p>
-              </div>
-              {% endif %}
-            </form>
-          </td>
-        </tr>
-        <tr>
-          <td></td>
-          <td></td>
-          <td></td>
-          <td></td>
-        </tr>
-      </tbody>
-    </table>
-  </section>
-
   <section
-    class="relative col-start-3 col-end-9 flex h-full w-full flex-col justify-center rounded-[50px] bg-white"
+    class="box lg:w-max lg:grid-cols-4 grid grid-cols-1 gap-6 p-4 px-5 py-3 text-center sm:grid-cols-4 overflow-x-scroll md:overflow-hidden"
   >
-    <div class="flex items-center">
-      <label
-        class="ml-10 w-[700px] text-3xl font-semibold text-color-secondary"
-        :class="open ? 'text-xl' : 'text-3xl'"
-        >Reconsideração de Notas (Aberto até 00/00/0000)</label
-      >
-      <button id="openModalButton">
-        <!-- OPEN RECONSIDERAÇÃO -->
-        <svg
-          xmlns="http://www.w3.org/2000/svg"
-          fill="none"
-          viewBox="0 0 24 24"
-          stroke-width="1.5"
-          stroke="currentColor"
-          class="absolute right-10 top-9 h-10 w-10 -translate-y-1/2 translate-x-1/2 transform"
-        >
-          <path
-            stroke-linecap="round"
-            stroke-linejoin="round"
-            d="M16.862 4.487l1.687-1.688a1.875 1.875 0 112.652 2.652L10.582 16.07a4.5 4.5 0 01-1.897 1.13L6 18l.8-2.685a4.5 4.5 0 011.13-1.897l8.932-8.931zm0 0L19.5 7.125M18 14v4.75A2.25 2.25 0 0115.75 21H5.25A2.25 2.25 0 013 18.75V8.25A2.25 2.25 0 015.25 6H10"
-          />
-        </svg>
-      </button>
+    <div class="flex flex-row col-span-4 h-10 rounded-3xl justify-center items-center font-semibold bg-color-secondary">
+      <span>Ficha de Desempenho - Sala de Aula</span>
     </div>
-    <form>
-      <div
-        id="modal"
-        class="fixed inset-0 hidden items-center justify-center bg-black bg-opacity-25"
-      >
-        <!-- SCREEN RECONSIDERAÇÃO -->
-        <div
-          class="h-[600px] w-[600px] rounded-3xl bg-color-grey text-color-primary"
-        >
-          <div
-            class="mx-10 mt-8 flex flex-row justify-between text-3xl font-bold"
-          >
-            <div>Reconsideração de Nota</div>
-            <div>
-              <button
-                id="closeModalButton"
-                class="text-3xl font-bold text-color-primary"
-              >
-                <!-- CLOSE RECONSIDERAÇÃO -->
-                <svg
-                  xmlns="http://www.w3.org/2000/svg"
-                  fill="none"
-                  viewBox="0 0 24 24"
-                  stroke-width="1.5"
-                  stroke="currentColor"
-                  class="h-6 w-6"
-                >
-                  <path
-                    stroke-linecap="round"
-                    stroke-linejoin="round"
-                    d="M6 18L18 6M6 6l12 12"
-                  />
-                </svg>
-              </button>
-            </div>
-          </div>
-          <div class="mx-10">
-            <div class="flex flex-row pb-3 pt-10">
-              <label>
-                Matéria:
-                <select class="text-zinc-500">
-                  <option>Lingua Portuguesa</option>
-                  <option>Variável Matéria</option>
-                  <option>Variável Matéria</option>
-                </select>
-              </label>
-            </div>
-
-            <div class="flex flex-row py-3">
-              <label>
-                Instrumento:
-                <select class="text-zinc-500">
-                  <option>Prova</option>
-                  <option>Atividade</option>
-                  <option>Outros</option>
-                </select>
-              </label>
-            </div>
-
-            <div class="flex flex-row py-3">
-              <label>
-                Menção:
-                <select class="text-zinc-500">
-                  <option>B</option>
-                  <option>Variável de notas</option>
-                  <option>Variável de notas</option>
-                </select>
-              </label>
-            </div>
-            <div class="pt-3">
-              <label class="block pb-3"> Reclamação: </label>
-              <textarea
-                class="h-[180px] w-full resize-none"
-                placeholder="Digite sua reclamação aqui!"
-              ></textarea>
-            </div>
-          </div>
-          <div class="flex items-center justify-center space-x-5 pt-3 text-lg">
-            <button
-              type="submit"
-              class="rounded-full border-2 border-solid border-color-secondary px-12 py-1 font-bold text-color-secondary transition hover:bg-color-hover"
-            >
-              Aplicar
+    <div class="flex flex-col gap-3">
+      <span class="info text-white bg-color-primary-dimm">Instrumento</span>
+      <span class="info bg-color-grey">oii</span>
+    </div>
+    <div class="flex flex-col gap-3">
+      <span class="info text-white bg-color-primary-dimm">Datas</span>
+      <span class="info bg-color-grey">08/11/2005</span>
+    </div>
+    <div class="flex flex-col gap-3">
+      <span class="info text-white bg-color-primary-dimm">Menção</span>
+      <span class="info bg-color-grey">MB</span>
+    </div>
+    <div class="flex flex-col gap-3">
+      <span class="info text-white bg-color-primary-dimm">Observação</span>
+      <span class="info bg-color-grey">
+        <form method="POST">
+          {% if request.user.is_superuser %} {% csrf_token %}
+          <input
+            type="text"
+            name="obs"
+            class="info w-[100%] bg-color-grey"
+            maxlength="200"
+            placeholder="Escreva Aqui!"
+          />
+          <div class="flex pt-1 justify-center">
+            <button type="submit" class="rounded-lg pt-3 bg-color-secondary">
+              Enviar
             </button>
           </div>
-        </div>
-      </div>
-    </form>
-    <label class="ml-10 text-base text-gray-400">
-      Clique no botão para conseguir sua reconsideração de nota
-    </label>
+          {% else %}
+          <div class="cursor-not-allowed w-[100%] rounded-full bg-color-grey">
+            <p
+              name="obs_student"
+              value="{{ request.POST.obs }}"
+              readonly
+            ></p>
+          </div>
+          {% endif %}
+        </form>
+      </span>
+    </div>
   </section>
 </main>
 {% endblock %}
