--- a/management/templates/management/courses.html
+++ b/management/templates/management/courses.html
@@ -206,12 +206,7 @@
         </div>
         <div class="mt-3 flex justify-center gap-3">
           <button type="reset" class="alt">Limpar</button>
-          <button
-            type="submit"
-            class="rounded-full border-2 border-color-secondary bg-transparent px-5 py-2 font-bold text-yellow-700 transition-all hover:bg-color-hover"
-          >
-            Aplicar
-          </button>
+          <button type="submit">Aplicar</button>
         </div>
       </form>
     </div>
@@ -419,7 +414,7 @@
     >
       <header class="flex justify-between px-6 py-4">
         <div>
-          <h2 class="text-color-primary font-semibold">
+          <h2 class="font-semibold text-color-primary">
             {{ course.name }} - {{ course.slug }}
           </h2>
           <div>
