--- a/management/templates/management/schedules.html
+++ b/management/templates/management/schedules.html
@@ -1,4 +1,4 @@
-{% extends 'core/base.html' %} {% load static %} {% block head %}
+{% extends 'core/base.html' %} {% load permission_tags %} {% load static %} {% block head %}
 <title>Horários</title>
 <link rel="stylesheet" href="{% static 'core/dist/css/schedule.css' %}" />
 <script defer>
@@ -68,7 +68,6 @@
           })
         );
       },
-      time: "{{ classroom.course.time }}",
       programmingTime: 1,
       programmingTimeShow: "",
       programmingDay: 1,
@@ -78,6 +77,7 @@
       subject: "",
       subjectB: "",
       studentGroup: false,
+      locked: "{{ user|has_role:'admin' }}" == "False",
     }));
   });
 </script>
@@ -115,7 +115,9 @@
     </table>
 
     <section class="rounded-xl bg-zinc-300 p-5">
-      <h2 class="mb-2 ml-2 mt-1 text-2xl font-semibold">Editar aula</h2>
+      <h2 class="mb-1 ml-1 mt-1 text-2xl font-semibold">
+        {% if user|has_role:'admin' %} Editar aula {% else %} Detalhes {% endif %}
+      </h2>
       <form
         action="{% url 'schedules' classroom.pk %}"
         method="post"
@@ -159,7 +161,12 @@
                   for="sl-subject"
                   x-text="`Matéria${studentGroup ? ' A' : ''}:`"
                 ></label>
-                <select name="subject" id="sl-subject" x-model="subject">
+                <select
+                  name="subject"
+                  id="sl-subject"
+                  x-model="subject"
+                  :disabled="locked"
+                >
                   {% for subject in subjects %}
                   <option value="{{ subject.pk }}">{{ subject.name }}</option>
                   {% endfor %}
@@ -175,6 +182,7 @@
                   name="teacher"
                   id="txt-teacher"
                   x-model="teacher"
+                  :disabled="locked"
                 />
               </div>
             </div>
@@ -182,7 +190,12 @@
               <div class="flex flex-col gap-3">
                 <div>
                   <label for="sl-subject">Matéria B:</label>
-                  <select name="subject_b" id="sl-subject" x-model="subjectB">
+                  <select
+                    name="subject_b"
+                    id="sl-subject"
+                    x-model="subjectB"
+                    :disabled="locked"
+                  >
                     {% for subject in subjects %}
                     <option value="{{ subject.pk }}">{{ subject.name }}</option>
                     {% endfor %}
@@ -195,11 +208,13 @@
                     name="teacher_b"
                     id="txt-teacher"
                     x-model="teacherB"
+                    :disabled="locked"
                   />
                 </div>
               </div>
             </template>
           </div>
+          {% if user|has_role:'admin' %}
           <div class="flex items-center gap-2">
             <label for="ch-group">Divisão de turmas:</label>
             <input
@@ -209,7 +224,8 @@
               x-model="studentGroup"
             />
           </div>
-          <button type="submit" class="px-6 py-2 mx-auto">Salvar</button>
+          <button type="submit" class="mx-auto px-6 py-2">Salvar</button>
+          {% endif %}
         </section>
       </form>
     </section>
