fixed alert form for mobile

--- a/core/static/core/css/alert.css
+++ b/core/static/core/css/alert.css
@@ -1,5 +1,5 @@
 .tags {
-  @apply grid w-max grid-cols-6 items-center gap-4 rounded-xl bg-color-bg-perfil p-4 pt-0;
+  @apply m-auto grid w-full grid-cols-3 md:grid-cols-6 items-center gap-4 rounded-xl bg-color-bg-perfil p-4 pt-0;
 }
 
 .tags label {
@@ -7,7 +7,7 @@
 }
 
 .tags input[type="radio"] {
-  @apply m-0 h-0 w-0 border-0 p-0 opacity-0 leading-none;
+  @apply m-0 h-0 w-0 border-0 p-0 leading-none opacity-0;
 }
 
 .tags label > div {
@@ -23,11 +23,11 @@
 }
 
 .tags label div span:first-child {
-  @apply text-[2.5rem];
+  @apply text-[2rem] md:text-[2.5rem];
 }
 
 .tags label div span:last-child {
-  @apply text-lg;
+  @apply text-sm md:text-lg;
 }
 
 textarea {
