--- a/communication/templates/communication/alert/alert.html
+++ b/communication/templates/communication/alert/alert.html
@@ -2,8 +2,8 @@
 <title>Gerar denúncia</title>
 <link rel="stylesheet" href="{% static 'core/dist/css/alert.css' %}" />
 {% endblock %} {% block content %}
-<main class="m-auto w-2/3">
-  <h1 class="my-6 font-sans text-3xl font-bold text-color-primary">
+<main class="m-auto w-5/6 md:w-2/3 mb-10">
+  <h1 class="my-6 font-sans text-2xl md:text-3xl font-bold text-color-primary">
     Reportar problema
   </h1>
   <form
@@ -59,16 +59,18 @@
       </label>
     </div>
     <div class="field">
-      <label for="txt-content">Descrição</label>
+      <label for="txt-content" class="text-color-primary">Descrição:</label>
       <textarea
         name="description"
         id="txt-content"
         cols="50"
         rows="6"
+        maxlength="400"
+        class="appearance-none"
       ></textarea>
     </div>
 
-    <div>
+    <div class="m-auto">
       <label for="attachment" class="file alt mr-4">
         <input
           type="file"
