--- a/communication/templates/communication/alert/list.html
+++ b/communication/templates/communication/alert/list.html
@@ -18,20 +18,25 @@
   });
 </script>
 {% endblock %} {% block content %}
-<main class="md:mx-16 flex-1 p-5">
+<main class="flex-1 p-5 md:mx-16">
   <h1 class="mb-3 font-sans text-3xl font-bold text-color-primary">Alertas</h1>
 
   <section class="mt-10 divide-gray-600" x-data="alert">
     <ul class="flex flex-col gap-5">
       {% for alert in alerts %}
       <div
-        class="rounded-2xl bg-gray-100 shadow"
+        class="rounded-3xl bg-gray-100 shadow"
         x-data="{ options: false, details: false }"
       >
         <header class="flex justify-between px-6 py-4">
           <div>
-            <h2 class="font-semibold text-color-primary">
-              {{ alert.emiter }} {% if alert.emiter|has_role:'student' %} - {{ alert.emiter.profile.classroom }} {% endif %}
+            <h2 class="font-semibold text-xl text-color-primary">
+              <span>{{ alert.emiter }}</span>
+              <span>
+                {% if alert.emiter|has_role:'student' %}
+                <span> - {{ alert.emiter.profile.classroom }} </span>
+                {% endif %}
+              </span>
             </h2>
             <p>
               <span>{{ alert.tag }}</span>
@@ -60,30 +65,27 @@
           </div>
         </header>
         <div
-          class="origin-top rounded-b-2xl bg-gray-200 p-5 transition-all"
+          class="origin-top rounded-b-3xl bg-gray-200 p-5 transition-all"
           :class="details || 'scale-y-0 h-0 py-0'"
         >
           <form action="">
-            <div class="flex flex-col gap-8 md:flex-row md:pr-16">
+            <div class="flex flex-col gap-4 md:flex-row md:gap-8 md:pr-16">
               <div class="flex flex-1 flex-col gap-1">
                 <label for="txt-res">Resposta:</label>
                 <input type="text" name="" id="" />
               </div>
               <div>
                 <div>
-                  <input type="radio" name="" id="" /><label for=""
-                    >Solucionada</label
-                  >
+                  <input type="radio" name="state" id="rd-sl" />
+                  <label for="rd-sl" >Solucionada</label>
                 </div>
                 <div>
-                  <input type="radio" name="" id="" /><label for=""
-                    >Solucionando</label
-                  >
+                  <input type="radio" name="state" id="rd-pr" />
+                  <label for="rd-pr">Solucionando</label>
                 </div>
                 <div>
-                  <input type="radio" name="" id="" /><label for=""
-                    >Sem solução</label
-                  >
+                  <input type="radio" name="state" id="rd-na" />
+                  <label for="rd-na">Sem solução</label>
                 </div>
               </div>
             </div>
@@ -93,11 +95,6 @@
       </div>
       {% endfor %}
     </ul>
-
-    <!-- <article>
-      <p x-text="info"></p>
-      <img :src="imgUrl" alt="imagem do alerta" />
-    </article> -->
   </section>
 </main>
 {% endblock %}
